# ent/teamidentityrole.go
@@ -1,0 +1,192 @@
+// Code generated by ent, DO NOT EDIT.
+
+package ent
+
+import (
+	"fmt"
+	"rbac/ent/role"
+	"rbac/ent/team"
+	"rbac/ent/teamidentityrole"
+	"strings"
+
+	"entgo.io/ent"
+	"entgo.io/ent/dialect/sql"
+)
+
+// TeamIdentityRole is the model entity for the TeamIdentityRole schema.
+type TeamIdentityRole struct {
+	config `json:"-"`
+	// ID of the ent.
+	ID int64 `json:"id,omitempty"`
+	// TenantID holds the value of the "tenant_id" field.
+	TenantID int64 `json:"tenant_id,omitempty"`
+	// TeamID holds the value of the "team_id" field.
+	TeamID *int64 `json:"team_id,omitempty"`
+	// IdentityID holds the value of the "identity_id" field.
+	IdentityID *int64 `json:"identity_id,omitempty"`
+	// RoleID holds the value of the "role_id" field.
+	RoleID int64 `json:"role_id,omitempty"`
+	// Edges holds the relations/edges for other nodes in the graph.
+	// The values are being populated by the TeamIdentityRoleQuery when eager-loading is set.
+	Edges        TeamIdentityRoleEdges `json:"edges"`
+	selectValues sql.SelectValues
+}
+
+// TeamIdentityRoleEdges holds the relations/edges for other nodes in the graph.
+type TeamIdentityRoleEdges struct {
+	// Role holds the value of the role edge.
+	Role *Role `json:"role,omitempty"`
+	// Team holds the value of the team edge.
+	Team *Team `json:"team,omitempty"`
+	// loadedTypes holds the information for reporting if a
+	// type was loaded (or requested) in eager-loading or not.
+	loadedTypes [2]bool
+}
+
+// RoleOrErr returns the Role value or an error if the edge
+// was not loaded in eager-loading, or loaded but was not found.
+func (e TeamIdentityRoleEdges) RoleOrErr() (*Role, error) {
+	if e.loadedTypes[0] {
+		if e.Role == nil {
+			// Edge was loaded but was not found.
+			return nil, &NotFoundError{label: role.Label}
+		}
+		return e.Role, nil
+	}
+	return nil, &NotLoadedError{edge: "role"}
+}
+
+// TeamOrErr returns the Team value or an error if the edge
+// was not loaded in eager-loading, or loaded but was not found.
+func (e TeamIdentityRoleEdges) TeamOrErr() (*Team, error) {
+	if e.loadedTypes[1] {
+		if e.Team == nil {
+			// Edge was loaded but was not found.
+			return nil, &NotFoundError{label: team.Label}
+		}
+		return e.Team, nil
+	}
+	return nil, &NotLoadedError{edge: "team"}
+}
+
+// scanValues returns the types for scanning values from sql.Rows.
+func (*TeamIdentityRole) scanValues(columns []string) ([]any, error) {
+	values := make([]any, len(columns))
+	for i := range columns {
+		switch columns[i] {
+		case teamidentityrole.FieldID, teamidentityrole.FieldTenantID, teamidentityrole.FieldTeamID, teamidentityrole.FieldIdentityID, teamidentityrole.FieldRoleID:
+			values[i] = new(sql.NullInt64)
+		default:
+			values[i] = new(sql.UnknownType)
+		}
+	}
+	return values, nil
+}
+
+// assignValues assigns the values that were returned from sql.Rows (after scanning)
+// to the TeamIdentityRole fields.
+func (tir *TeamIdentityRole) assignValues(columns []string, values []any) error {
+	if m, n := len(values), len(columns); m < n {
+		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
+	}
+	for i := range columns {
+		switch columns[i] {
+		case teamidentityrole.FieldID:
+			value, ok := values[i].(*sql.NullInt64)
+			if !ok {
+				return fmt.Errorf("unexpected type %T for field id", value)
+			}
+			tir.ID = int64(value.Int64)
+		case teamidentityrole.FieldTenantID:
+			if value, ok := values[i].(*sql.NullInt64); !ok {
+				return fmt.Errorf("unexpected type %T for field tenant_id", values[i])
+			} else if value.Valid {
+				tir.TenantID = value.Int64
+			}
+		case teamidentityrole.FieldTeamID:
+			if value, ok := values[i].(*sql.NullInt64); !ok {
+				return fmt.Errorf("unexpected type %T for field team_id", values[i])
+			} else if value.Valid {
+				tir.TeamID = new(int64)
+				*tir.TeamID = value.Int64
+			}
+		case teamidentityrole.FieldIdentityID:
+			if value, ok := values[i].(*sql.NullInt64); !ok {
+				return fmt.Errorf("unexpected type %T for field identity_id", values[i])
+			} else if value.Valid {
+				tir.IdentityID = new(int64)
+				*tir.IdentityID = value.Int64
+			}
+		case teamidentityrole.FieldRoleID:
+			if value, ok := values[i].(*sql.NullInt64); !ok {
+				return fmt.Errorf("unexpected type %T for field role_id", values[i])
+			} else if value.Valid {
+				tir.RoleID = value.Int64
+			}
+		default:
+			tir.selectValues.Set(columns[i], values[i])
+		}
+	}
+	return nil
+}
+
+// Value returns the ent.Value that was dynamically selected and assigned to the TeamIdentityRole.
+// This includes values selected through modifiers, order, etc.
+func (tir *TeamIdentityRole) Value(name string) (ent.Value, error) {
+	return tir.selectValues.Get(name)
+}
+
+// QueryRole queries the "role" edge of the TeamIdentityRole entity.
+func (tir *TeamIdentityRole) QueryRole() *RoleQuery {
+	return NewTeamIdentityRoleClient(tir.config).QueryRole(tir)
+}
+
+// QueryTeam queries the "team" edge of the TeamIdentityRole entity.
+func (tir *TeamIdentityRole) QueryTeam() *TeamQuery {
+	return NewTeamIdentityRoleClient(tir.config).QueryTeam(tir)
+}
+
+// Update returns a builder for updating this TeamIdentityRole.
+// Note that you need to call TeamIdentityRole.Unwrap() before calling this method if this TeamIdentityRole
+// was returned from a transaction, and the transaction was committed or rolled back.
+func (tir *TeamIdentityRole) Update() *TeamIdentityRoleUpdateOne {
+	return NewTeamIdentityRoleClient(tir.config).UpdateOne(tir)
+}
+
+// Unwrap unwraps the TeamIdentityRole entity that was returned from a transaction after it was closed,
+// so that all future queries will be executed through the driver which created the transaction.
+func (tir *TeamIdentityRole) Unwrap() *TeamIdentityRole {
+	_tx, ok := tir.config.driver.(*txDriver)
+	if !ok {
+		panic("ent: TeamIdentityRole is not a transactional entity")
+	}
+	tir.config.driver = _tx.drv
+	return tir
+}
+
+// String implements the fmt.Stringer.
+func (tir *TeamIdentityRole) String() string {
+	var builder strings.Builder
+	builder.WriteString("TeamIdentityRole(")
+	builder.WriteString(fmt.Sprintf("id=%v, ", tir.ID))
+	builder.WriteString("tenant_id=")
+	builder.WriteString(fmt.Sprintf("%v", tir.TenantID))
+	builder.WriteString(", ")
+	if v := tir.TeamID; v != nil {
+		builder.WriteString("team_id=")
+		builder.WriteString(fmt.Sprintf("%v", *v))
+	}
+	builder.WriteString(", ")
+	if v := tir.IdentityID; v != nil {
+		builder.WriteString("identity_id=")
+		builder.WriteString(fmt.Sprintf("%v", *v))
+	}
+	builder.WriteString(", ")
+	builder.WriteString("role_id=")
+	builder.WriteString(fmt.Sprintf("%v", tir.RoleID))
+	builder.WriteByte(')')
+	return builder.String()
+}
+
+// TeamIdentityRoles is a parsable slice of TeamIdentityRole.
+type TeamIdentityRoles []*TeamIdentityRole
