# ent/teamidentityrole_update.go
@@ -1,0 +1,219 @@
+// Code generated by ent, DO NOT EDIT.
+
+package ent
+
+import (
+	"context"
+	"errors"
+	"fmt"
+	"rbac/ent/predicate"
+	"rbac/ent/teamidentityrole"
+
+	"entgo.io/ent/dialect/sql"
+	"entgo.io/ent/dialect/sql/sqlgraph"
+	"entgo.io/ent/schema/field"
+)
+
+// TeamIdentityRoleUpdate is the builder for updating TeamIdentityRole entities.
+type TeamIdentityRoleUpdate struct {
+	config
+	hooks     []Hook
+	mutation  *TeamIdentityRoleMutation
+	modifiers []func(*sql.UpdateBuilder)
+}
+
+// Where appends a list predicates to the TeamIdentityRoleUpdate builder.
+func (tiru *TeamIdentityRoleUpdate) Where(ps ...predicate.TeamIdentityRole) *TeamIdentityRoleUpdate {
+	tiru.mutation.Where(ps...)
+	return tiru
+}
+
+// Mutation returns the TeamIdentityRoleMutation object of the builder.
+func (tiru *TeamIdentityRoleUpdate) Mutation() *TeamIdentityRoleMutation {
+	return tiru.mutation
+}
+
+// Save executes the query and returns the number of nodes affected by the update operation.
+func (tiru *TeamIdentityRoleUpdate) Save(ctx context.Context) (int, error) {
+	return withHooks(ctx, tiru.sqlSave, tiru.mutation, tiru.hooks)
+}
+
+// SaveX is like Save, but panics if an error occurs.
+func (tiru *TeamIdentityRoleUpdate) SaveX(ctx context.Context) int {
+	affected, err := tiru.Save(ctx)
+	if err != nil {
+		panic(err)
+	}
+	return affected
+}
+
+// Exec executes the query.
+func (tiru *TeamIdentityRoleUpdate) Exec(ctx context.Context) error {
+	_, err := tiru.Save(ctx)
+	return err
+}
+
+// ExecX is like Exec, but panics if an error occurs.
+func (tiru *TeamIdentityRoleUpdate) ExecX(ctx context.Context) {
+	if err := tiru.Exec(ctx); err != nil {
+		panic(err)
+	}
+}
+
+// check runs all checks and user-defined validators on the builder.
+func (tiru *TeamIdentityRoleUpdate) check() error {
+	if _, ok := tiru.mutation.RoleID(); tiru.mutation.RoleCleared() && !ok {
+		return errors.New(`ent: clearing a required unique edge "TeamIdentityRole.role"`)
+	}
+	if _, ok := tiru.mutation.TeamID(); tiru.mutation.TeamCleared() && !ok {
+		return errors.New(`ent: clearing a required unique edge "TeamIdentityRole.team"`)
+	}
+	return nil
+}
+
+// Modify adds a statement modifier for attaching custom logic to the UPDATE statement.
+func (tiru *TeamIdentityRoleUpdate) Modify(modifiers ...func(u *sql.UpdateBuilder)) *TeamIdentityRoleUpdate {
+	tiru.modifiers = append(tiru.modifiers, modifiers...)
+	return tiru
+}
+
+func (tiru *TeamIdentityRoleUpdate) sqlSave(ctx context.Context) (n int, err error) {
+	if err := tiru.check(); err != nil {
+		return n, err
+	}
+	_spec := sqlgraph.NewUpdateSpec(teamidentityrole.Table, teamidentityrole.Columns, sqlgraph.NewFieldSpec(teamidentityrole.FieldID, field.TypeInt64))
+	if ps := tiru.mutation.predicates; len(ps) > 0 {
+		_spec.Predicate = func(selector *sql.Selector) {
+			for i := range ps {
+				ps[i](selector)
+			}
+		}
+	}
+	_spec.AddModifiers(tiru.modifiers...)
+	if n, err = sqlgraph.UpdateNodes(ctx, tiru.driver, _spec); err != nil {
+		if _, ok := err.(*sqlgraph.NotFoundError); ok {
+			err = &NotFoundError{teamidentityrole.Label}
+		} else if sqlgraph.IsConstraintError(err) {
+			err = &ConstraintError{msg: err.Error(), wrap: err}
+		}
+		return 0, err
+	}
+	tiru.mutation.done = true
+	return n, nil
+}
+
+// TeamIdentityRoleUpdateOne is the builder for updating a single TeamIdentityRole entity.
+type TeamIdentityRoleUpdateOne struct {
+	config
+	fields    []string
+	hooks     []Hook
+	mutation  *TeamIdentityRoleMutation
+	modifiers []func(*sql.UpdateBuilder)
+}
+
+// Mutation returns the TeamIdentityRoleMutation object of the builder.
+func (tiruo *TeamIdentityRoleUpdateOne) Mutation() *TeamIdentityRoleMutation {
+	return tiruo.mutation
+}
+
+// Where appends a list predicates to the TeamIdentityRoleUpdate builder.
+func (tiruo *TeamIdentityRoleUpdateOne) Where(ps ...predicate.TeamIdentityRole) *TeamIdentityRoleUpdateOne {
+	tiruo.mutation.Where(ps...)
+	return tiruo
+}
+
+// Select allows selecting one or more fields (columns) of the returned entity.
+// The default is selecting all fields defined in the entity schema.
+func (tiruo *TeamIdentityRoleUpdateOne) Select(field string, fields ...string) *TeamIdentityRoleUpdateOne {
+	tiruo.fields = append([]string{field}, fields...)
+	return tiruo
+}
+
+// Save executes the query and returns the updated TeamIdentityRole entity.
+func (tiruo *TeamIdentityRoleUpdateOne) Save(ctx context.Context) (*TeamIdentityRole, error) {
+	return withHooks(ctx, tiruo.sqlSave, tiruo.mutation, tiruo.hooks)
+}
+
+// SaveX is like Save, but panics if an error occurs.
+func (tiruo *TeamIdentityRoleUpdateOne) SaveX(ctx context.Context) *TeamIdentityRole {
+	node, err := tiruo.Save(ctx)
+	if err != nil {
+		panic(err)
+	}
+	return node
+}
+
+// Exec executes the query on the entity.
+func (tiruo *TeamIdentityRoleUpdateOne) Exec(ctx context.Context) error {
+	_, err := tiruo.Save(ctx)
+	return err
+}
+
+// ExecX is like Exec, but panics if an error occurs.
+func (tiruo *TeamIdentityRoleUpdateOne) ExecX(ctx context.Context) {
+	if err := tiruo.Exec(ctx); err != nil {
+		panic(err)
+	}
+}
+
+// check runs all checks and user-defined validators on the builder.
+func (tiruo *TeamIdentityRoleUpdateOne) check() error {
+	if _, ok := tiruo.mutation.RoleID(); tiruo.mutation.RoleCleared() && !ok {
+		return errors.New(`ent: clearing a required unique edge "TeamIdentityRole.role"`)
+	}
+	if _, ok := tiruo.mutation.TeamID(); tiruo.mutation.TeamCleared() && !ok {
+		return errors.New(`ent: clearing a required unique edge "TeamIdentityRole.team"`)
+	}
+	return nil
+}
+
+// Modify adds a statement modifier for attaching custom logic to the UPDATE statement.
+func (tiruo *TeamIdentityRoleUpdateOne) Modify(modifiers ...func(u *sql.UpdateBuilder)) *TeamIdentityRoleUpdateOne {
+	tiruo.modifiers = append(tiruo.modifiers, modifiers...)
+	return tiruo
+}
+
+func (tiruo *TeamIdentityRoleUpdateOne) sqlSave(ctx context.Context) (_node *TeamIdentityRole, err error) {
+	if err := tiruo.check(); err != nil {
+		return _node, err
+	}
+	_spec := sqlgraph.NewUpdateSpec(teamidentityrole.Table, teamidentityrole.Columns, sqlgraph.NewFieldSpec(teamidentityrole.FieldID, field.TypeInt64))
+	id, ok := tiruo.mutation.ID()
+	if !ok {
+		return nil, &ValidationError{Name: "id", err: errors.New(`ent: missing "TeamIdentityRole.id" for update`)}
+	}
+	_spec.Node.ID.Value = id
+	if fields := tiruo.fields; len(fields) > 0 {
+		_spec.Node.Columns = make([]string, 0, len(fields))
+		_spec.Node.Columns = append(_spec.Node.Columns, teamidentityrole.FieldID)
+		for _, f := range fields {
+			if !teamidentityrole.ValidColumn(f) {
+				return nil, &ValidationError{Name: f, err: fmt.Errorf("ent: invalid field %q for query", f)}
+			}
+			if f != teamidentityrole.FieldID {
+				_spec.Node.Columns = append(_spec.Node.Columns, f)
+			}
+		}
+	}
+	if ps := tiruo.mutation.predicates; len(ps) > 0 {
+		_spec.Predicate = func(selector *sql.Selector) {
+			for i := range ps {
+				ps[i](selector)
+			}
+		}
+	}
+	_spec.AddModifiers(tiruo.modifiers...)
+	_node = &TeamIdentityRole{config: tiruo.config}
+	_spec.Assign = _node.assignValues
+	_spec.ScanValues = _node.scanValues
+	if err = sqlgraph.UpdateNode(ctx, tiruo.driver, _spec); err != nil {
+		if _, ok := err.(*sqlgraph.NotFoundError); ok {
+			err = &NotFoundError{teamidentityrole.Label}
+		} else if sqlgraph.IsConstraintError(err) {
+			err = &ConstraintError{msg: err.Error(), wrap: err}
+		}
+		return nil, err
+	}
+	tiruo.mutation.done = true
+	return _node, nil
+}
